Finalizada la práctica con Bootstrap y algo de JS

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="pruebitas.js"></script> -->
 
       <!-- Animaciones -->
-      <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   </head>
   <body>
     <header id="header">
@@ -134,7 +134,7 @@
         <div id="topics" class="row justify-content-center mb-5">
           <div class="col-md mb-4">
             <div class="card">
-              <a href="#" class="text-decoration-none text-dark">
+              <a class="text-decoration-none text-dark">
                 <img src="https://www.futbolred.com/files/article_main/files/crop/uploads/2021/05/05/609304c2e3c74.r_1620299486939.0-2-1000-502.jpeg" alt="Raheem Sterling and N'golo Kanté struggling on a play." class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title text-center">Sports</h5>
@@ -145,7 +145,7 @@
           </div>
           <div class="col-md mb-4">
             <div class="card">
-              <a href="#" class="text-decoration-none text-dark">
+              <a class="text-decoration-none text-dark">
                 <img src="imgs/GAFAM.jpg" alt="Smartphone with Big Tech logos." class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title text-center">Tech</h5>
@@ -156,7 +156,7 @@
           </div>
           <div class="col-md mb-4">
             <div class="card">
-              <a href="#" class="text-decoration-none text-dark">
+              <a class="text-decoration-none text-dark">
                 <img src="imgs/travel.jpg" alt="A man with his back to the camera watching flights at an airport." class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title text-center">Travel</h5>
@@ -167,24 +167,24 @@
           </div>
         </div>
 
-        <div id="another-topics">
+        <div id="other-topics">
           <h4 class="text-center">Other relevant topics</h3>
 
           <div class="row text-center justify-content-center mt-4">
-            <div class="col-2">
-              <a href="#">Economy</a>
+            <div class="col-2 otherTopics-cols">
+              <a>Economy</a>
             </div>
-            <div class="col-3">
-              <a href="#">Entertainment</a>
+            <div class="col-3 otherTopics-cols">
+              <a>Entertainment</a>
             </div>
-            <div class="col-2">
-              <a href="#">Laboral life</a>
+            <div class="col-2 otherTopics-cols">
+              <a>Laboral life</a>
             </div>
-            <div class="col-2">
-              <a href="#">Opinion</a>
+            <div class="col-2 otherTopics-cols">
+              <a>Opinion</a>
             </div>
-            <div class="col-2">
-              <a href="#">Policy</a>
+            <div class="col-2 otherTopics-cols">
+              <a>Policy</a>
             </div>
           </div>
         </div>
@@ -304,8 +304,8 @@
             <div id="div-nets">
               <p class="mb-2">Contact with us</p>
               <div id="div_div-nets">
-                <a href="#"><i class="fab fa-instagram-square"></i></a>
-                <a href="#"><i class="fab fa-twitter-square"></i></a>
+                <a href="https://www.instagram.com/javiervalerianoz"><i class="fab fa-instagram-square"></i></a>
+                <a href="https://twitter.com/javaleriano2"><i class="fab fa-twitter-square"></i></a>
               </div>
             </div>
           </div>
@@ -325,5 +325,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+      <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
