--- a/index.html
+++ b/index.html
@@ -171,19 +171,19 @@
           <h4 class="text-center">Other relevant topics</h3>
 
           <div class="row text-center justify-content-center mt-4">
-            <div class="col-2 otherTopics-cols">
+            <div class="col-sm-2 mt-0 mb-2 otherTopics-cols">
               <a>Economy</a>
             </div>
-            <div class="col-3 otherTopics-cols">
+            <div class="col-sm-3 mt-0 mb-2 otherTopics-cols">
               <a>Entertainment</a>
             </div>
-            <div class="col-2 otherTopics-cols">
+            <div class="col-sm-2 mt-0 mb-2 otherTopics-cols">
               <a>Laboral life</a>
             </div>
-            <div class="col-2 otherTopics-cols">
+            <div class="col-sm-2 mt-0 mb-2 otherTopics-cols">
               <a>Opinion</a>
             </div>
-            <div class="col-2 otherTopics-cols">
+            <div class="col-sm-2 mt-0 mb-2 otherTopics-cols">
               <a>Policy</a>
             </div>
           </div>
