Agrego los metadatos necesarios

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <!-- Meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Javier Valeriano">
+    <meta name="reply-to" content="jvalerianoz15@gmail.com">
+    <LINK REV="made" href="mailto:jvalerianoz15@gmail.com">
+    <meta name="description" content="Una práctica de un home de una web con Bootstrap.">
+    <meta name="keywords" content="Bootstrap,noticias,news,daily,diario,sports,deportes,tech,tecnología,travel,viajes">
+    <meta name="Resource-type" content="Journal">
+    <meta name="robots" content="all">
 
     <!-- Bootstrap y estilos -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,10 +24,6 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
       integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-
-    <!-- Solicitud a jQuery -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="pruebitas.js"></script> -->
 
       <!-- Animaciones -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
